Adjust typography on activities, update version of app.js

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="w-col w-col-stack">
             <h5 class="activities-header">{{strings.main_activities}}</h5>
             <ul class="activities">
-              <li ng-repeat="activity in job.activities">{{activity}}</li>
+              <li ng-repeat="activity in job.activities" class="activity">{{activity}}</li>
             </ul>
         </div>
       </section>
@@ -198,7 +198,7 @@
         document.write('<link type="text/css" rel="stylesheet" href="bower_components/owl.carousel/dist/assets/owl.carousel.min.css" />');
       }
     </script>
-    <script type="text/javascript" src="js/app.js?v=4"></script>
+    <script type="text/javascript" src="js/app.js?v=5"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
