--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <link rel="stylesheet" type="text/css" href="css/app-min.css" />
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/angularjs/angular.min.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <noscript>
@@ -52,6 +54,7 @@
         <li><a href="#exp">{{strings.experiences}}</a></li>
         <li><a href="#skills">{{strings.some_interests}}</a></li>
         <li><a href="#projects">{{strings.personal_projects}}</a></li>
+        <li><a href="#github">{{strings.github_contributions}}</a></li>
       </ul>
     </nav>
 
@@ -61,9 +64,6 @@
     </div>
 
     <main class="main">
-      <section class="w-container contacts-container">
-      </section>
-
       <section class="w-container language-container">
         <a class="w-inline-block here" onclick="return false;">
           <img width="16" height="11" class="language-image pt-br{{currentLang === 'pt' ? ' current' : ''}}" ng-click="setLocale('pt')" src="images/br.png" alt="Português do Brasil">
@@ -95,7 +95,7 @@
         <a href="https://twitter.com/wakimjraige" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
       </section>
 
-      <div class="w-row card-header">
+      <div class="w-row card-header exp-header">
         <div class="w-col w-col-stack">
           <h3 id="exp"><i class="fa fa-briefcase card-header-icon"></i> {{strings.experiences}}</h3>
         </div>
@@ -120,7 +120,7 @@
         </div>
       </section>
 
-      <div class="w-row card-header">
+      <div class="w-row card-header skills-header">
         <div class="w-col w-col-stack">
           <h3 id="skills"><i class="fa fa-code card-header-icon"></i> {{strings.some_interests}}</h3>
         </div>
@@ -159,9 +159,10 @@
                       <a class="w-inline-block" ng-if="project.google_play_link" ng-href="{{project.google_play_link}}" target="_blank">
                         <img width="130" height="45" ng-src="{{strings.google_play_badge_link}}" alt="{{strings.google_play_badge_alt}}">
                       </a>
-                      <div class="w-embed w-iframe github-button" ng-if="project.github_source">
-                        <iframe ng-src="{{project.github_source | trustUrl}}" height="30" width="100" frameborder="0" scrolling="0" style="width:100px; position: relative;top: 10px;height: 30px;" allowTransparency="true"></iframe>
+                      <div class="github-container">
+                        <a class="github-button" ng-href="{{project.github_source | trustUrl}}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star {{project.name}}} on GitHub" ng-if="project.github_source">Star {{project.name}}</a>
                       </div>
+                      <a class="print" ng-href="{{project.github_source | trustUrl}}" ng-if="project.github_source">{{strings.source}}</a>
                     </div>
                   </div>
               </div>
@@ -175,11 +176,29 @@
                 <a class="w-inline-block" ng-href="{{project.google_play_link}}" target="_blank" data-ix="new-interaction-2" ng-if="project.google_play_link">
                   <img width="130" height="45" ng-src="{{strings.google_play_badge_link}}" alt="{{strings.google_play_badge_alt}}">
                 </a>
-                <div class="w-embed w-iframe github-button" ng-if="project.github_source">
-                  <iframe ng-src="{{project.github_source | trustUrl}}" height="30" width="100" frameborder="0" scrolling="0" style="width:100px; position: relative;top: 10px;height: 30px;" allowTransparency="true"></iframe>
+                <div class="github-container">
+                  <a class="github-button" ng-href="{{project.github_source | trustUrl}}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star {{project.name}}} on GitHub" ng-if="project.github_source">Star {{project.name}}</a>
                 </div>
+                <a class="print" ng-href="{{project.github_source | trustUrl}}" ng-if="project.github_source">{{strings.source}}</a>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+
+      <div class="w-row card-header github">
+        <div class="w-col w-col-stack">
+          <h3 id="github"><i class="fa fa-github card-header-icon"></i> {{strings.github_contributions}}</h3>
+        </div>
+      </div>
+
+      <section class="github card-1">
+        <div class="w-row">
+          <div class="w-col w-col-stack w-col-12">
+            <div class="calendar">
+              <a href="https://github.com/wakim">Minhas contribuições no github</a>
+            </div>
+            <p class="github_note">*{{strings.contain_private_contributions}}</p>
           </div>
         </div>
       </section>
@@ -200,6 +219,10 @@
     </script>
     <script type="text/javascript" src="js/app.js?v=5"></script>
     <script type="text/javascript" src="js/services.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
+    <script type="text/javascript">
+      GitHubCalendar(".calendar", "wakim");
+    </script>
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
