Change hamburguer menu with svg to prevent issues

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     </nav>
 
     <div class="toolbar low-res">
-      <span class="menu ssm-toggle-nav">
-      </span>
+      <img class="menu ssm-toggle-nav" src="images/ic_menu_white_24px.svg" />
     </div>
 
     <main class="main">
