--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta name="twitter:description" content="Site pessoal de Wakim Jraige. Desenvolvedor Android e Web.">
     <meta name="twitter:creator" content="@wakimjraige">
 
-    <meta name="twitter:image" content="http://www.wakimjraige.com/images/time-wakim.jpg">
+    <meta name="twitter:image" content="http://www.wakimjraige.com/images/me.jpg">
 
     <meta property="og:title" content="Site pessoal de Wakim Jraige" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.wakimjraige.com" />
-    <meta property="og:image" content="http://www.wakimjraige.com/images/time-wakim.jpg" />
+    <meta property="og:image" content="http://www.wakimjraige.com/images/me.jpg" />
     <meta property="og:description" content="Site pessoal de Wakim Jraige. Desenvolvedor Android e Web." />
     <meta property="og:site_name" content="Site pessoal de Wakim Jraige" />
     <meta property="fb:admins" content="10150979369546009" />
@@ -73,7 +73,7 @@
       </section>
 
       <section class="resume card-1">
-        <img class="title-image" id="resume" src="images/time-wakim.jpg" alt="Me" />
+        <img class="title-image" id="resume" src="images/me.jpg" alt="Me" />
         <h1 class="title">Wakim Jraige</h1>
         <p class="sub-title w-row" ng-bind-html="school | trustHtml"></p>
         <p class="main-p w-row" ng-bind-html="resume | trustHtml"></p>
