--- a/agile-planning-poker-privacy-policy.html
+++ b/agile-planning-poker-privacy-policy.html
@@ -44,8 +44,7 @@
 </ul>
 <h2>Collecting and Using Your Personal Data</h2>
 <h3>Types of Data Collected</h3>
-<p>We don't collect data</p>
-<p>Our Service may give You the ability to delete certain information about You from within the Service.</p>
+<p>We do not store or collect data</p>
 <p>You may update, amend, or delete Your information at any time by signing in to Your Account, if you have one, and visiting the account settings section that allows you to manage Your personal information. You may also contact Us to request access to, correct, or delete any personal information that You have provided to Us.</p>
 <p>Please note, however, that We may need to retain certain information when we have a legal obligation or lawful basis to do so.</p>
 <h3>Disclosure of Your Personal Data</h3>
@@ -63,7 +62,7 @@
 <li>Protect against legal liability</li>
 </ul>
 <h3>Security of Your Personal Data</h3>
-<p>We do not store your data</p>
+<p>We do not store or collect your data</p>
 <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
 <h2>Links to Other Websites</h2>
 <p>Our Service may contain links to other websites that are not operated by Us. If You click on a third party link, You will be directed to that third party's site. We strongly advise You to review the Privacy Policy of every site You visit.</p>
